--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -54,6 +54,13 @@
 <!-- Page level custom scripts -->
 <!-- <script src="js/demo/datatables-demo.js"></script> -->
 
+<!-- Page level plugins -->
+<script src="/assets/vendor/chart.js/Chart.min.js"></script>
+
+<!-- Page level custom scripts -->
+<script src="/assets/js/demo/chart-area-demo.js"></script>
+<script src="/assets/js/demo/chart-pie-demo.js"></script>
+
 </body>
 
 </html>
