--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -56,8 +56,8 @@
             <hr class="sidebar-divider my-0">
 
             <!-- Nav Item - Dashboard -->
-            <li class="nav-item<%= path.startsWith('/dashboard') ? ' active' : '' %>">
-                <a class="nav-link" href="/dashboard">
+            <li class="nav-item<%= path.startsWith('/dashboards') ? ' active' : '' %>">
+                <a class="nav-link" href="/dashboards">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Dashboard</span></a>
             </li>
