tampilan report(purchases, sales, earnings, totalsales) & repair router done

--- a/views/dashboards/list.ejs
+++ b/views/dashboards/list.ejs
@@ -59,7 +59,10 @@
                             <div class="col mr-2">
                                 <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
                                     PURCHASES</div>
-                                <div class="h5 mb-0 font-weight-bold text-gray-800">Rp 715.000,00</div>
+                                <div class="h5 mb-0 font-weight-bold text-gray-800">
+                                    <%= new Intl.NumberFormat('id', { style: 'currency' , currency: 'IDR'
+                                        }).format(purchases[0].total) %>
+                                </div>
                             </div>
                             <div class="col-auto">
                                 <i class="fas fa-calendar fa-2x text-gray-300"></i>
@@ -77,7 +80,10 @@
                             <div class="col mr-2">
                                 <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
                                     SALES</div>
-                                <div class="h5 mb-0 font-weight-bold text-gray-800">Rp 859.000,00</div>
+                                <div class="h5 mb-0 font-weight-bold text-gray-800">
+                                    <%= new Intl.NumberFormat('id', { style: 'currency' , currency: 'IDR'
+                                        }).format(sales[0].total) %>
+                                </div>
                             </div>
                             <div class="col-auto">
                                 <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
@@ -95,7 +101,10 @@
                             <div class="col mr-2">
                                 <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
                                     EARNINGS</div>
-                                <div class="h5 mb-0 font-weight-bold text-gray-800">Rp 144.000,00</div>
+                                <div class="h5 mb-0 font-weight-bold text-gray-800">
+                                    <%= new Intl.NumberFormat('id', { style: 'currency' , currency: 'IDR'
+                                        }).format(sales[0].total - purchases[0].total ) %>
+                                </div>
                             </div>
                             <div class="col-auto">
                                 <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
@@ -113,7 +122,9 @@
                             <div class="col mr-2">
                                 <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">
                                     TOTAL SALES</div>
-                                <div class="h5 mb-0 font-weight-bold text-gray-800">4</div>
+                                <div class="h5 mb-0 font-weight-bold text-gray-800">
+                                    <%= salesTotal[0].total %>
+                                </div>
                             </div>
                             <div class="col-auto">
                                 <i class="fas fa-comments fa-2x text-gray-300"></i>
