--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -34,6 +34,9 @@
 
     <script type="text/javascript" src="/javascripts/moment.js"></script>
 
+    <!-- Page level plugins -->
+    <script src="/assets/vendor/chart.js/Chart.min.js"></script>
+
 </head>
 
 <body id="page-top">
@@ -72,8 +75,8 @@
 
             <!-- Nav Item - Goods Utilities Collapse Menu -->
             <li class="nav-item">
-                <a class="nav-link" href="" data-toggle="collapse" data-target="#collapseUtilities"
-                    aria-expanded="true" aria-controls="collapseUtilities">
+                <a class="nav-link" href="" data-toggle="collapse" data-target="#collapseUtilities" aria-expanded="true"
+                    aria-controls="collapseUtilities">
                     <i class="fas fa-fw fa-wrench"></i>
                     <span>Goods Utilities</span>
                 </a>
