--- a/views/dashboards/list.ejs
+++ b/views/dashboards/list.ejs
@@ -6,7 +6,7 @@
         <!-- Page Heading -->
         <div class="d-sm-flex align-items-center justify-content-between mb-4">
             <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
-            <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
+            <a href="" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
                     class="fas fa-download fa-sm text-white-50"></i> Generate Report</a>
         </div>
 
@@ -20,11 +20,13 @@
                     <div class="form-row">
                         <div class="form-group col-md-6">
                             <label for="startdate" class="form-label">Start Date</label>
-                            <input type="date" class="form-control" id="startdate" name="startdate">
+                            <input type="date" class="form-control" id="startdate" name="startdate"
+                                value="<%= query.startdate %>">
                         </div>
                         <div class="form-group col-md-6">
                             <label for="enddate" class="form-label">End Date</label>
-                            <input type="date" class="form-control" id="enddate" name="enddate">
+                            <input type="date" class="form-control" id="enddate" name="enddate"
+                                value="<%= query.enddate %>">
                         </div>
                     </div>
                 </div>
@@ -138,7 +140,7 @@
         <!-- Content Row -->
         <div class="row">
 
-            <!-- Area Chart -->
+            <!-- Line Chart -->
             <div class="col-xl-8 col-lg-7">
                 <div class="card shadow mb-4">
                     <!-- Card Header - Dropdown -->
@@ -168,7 +170,7 @@
                 </div>
             </div>
 
-            <!-- Pie Chart -->
+            <!-- doughnut Chart -->
             <div class="col-xl-4 col-lg-5">
                 <div class="card shadow mb-4">
                     <!-- Card Header - Dropdown -->
@@ -192,7 +194,7 @@
                     <!-- Card Body -->
                     <div class="card-body">
                         <div class="chart-pie pt-4 pb-2">
-                            <canvas id="myPieChart"></canvas>
+                            <canvas id="doughnutChart"></canvas>
                         </div>
                         <div class="mt-4 text-center small">
                             <span class="mr-2">
@@ -281,6 +283,7 @@
     <script>
         $(document).ready(function () {
             readsData()
+            readData()
 
             $('#dataTable').DataTable({
                 "lengthMenu": [[3, 10, 100], [3, 10, 100]]
@@ -316,9 +319,13 @@
             return s.join(dec);
         }
 
-        // Area Chart Example
+        // Line Chart Example
         const readsData = () => {
             $.ajax({
+                data: {
+                    startdate: $('#startdate').val(),
+                    enddate: $('#enddate').val()
+                },
                 url: 'dashboards/chart'
             }).done((res) => {
                 const { getMonth, income } = res
@@ -409,6 +416,59 @@
                             }
                         }
                     }
+                });
+            })
+        }
+
+        // Set new default font family and font color to mimic Bootstrap's default styling
+        Chart.defaults.global.defaultFontFamily = 'Nunito', '-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif';
+        Chart.defaults.global.defaultFontColor = '#858796';
+
+        // doughnut Chart Example
+        const readData = () => {
+            let countDirect = null
+            let countMember = null
+
+            $.ajax({
+                data: {
+                    startdate: $('#startdate').val(),
+                    enddate: $('#enddate').val()
+                },
+                url: 'dashboards/chart'
+            }).done((res) => {
+                const { direct, member } = res
+                countDirect = direct[0].count
+                countMember = member[0].count
+
+                const doughnut = $('#doughnutChart');
+                new Chart(doughnut, {
+                    type: 'doughnut',
+                    data: {
+                        labels: ["Direct", "Member"],
+                        datasets: [{
+                            data: [countDirect, countMember],
+                            backgroundColor: ['#4e73df', '#1cc88a', '#36b9cc'],
+                            hoverBackgroundColor: ['#2e59d9', '#17a673', '#2c9faf'],
+                            hoverBorderColor: "rgba(234, 236, 244, 1)",
+                        }],
+                    },
+                    options: {
+                        maintainAspectRatio: true,
+                        tooltips: {
+                            backgroundColor: "rgb(255,255,255)",
+                            bodyFontColor: "#858796",
+                            borderColor: '#dddfeb',
+                            borderWidth: 1,
+                            xPadding: 15,
+                            yPadding: 15,
+                            displayColors: false,
+                            caretPadding: 10,
+                        },
+                        legend: {
+                            display: false
+                        },
+                        cutoutPercentage: 80,
+                    },
                 });
             })
         }
