--- a/views/goods/edit.ejs
+++ b/views/goods/edit.ejs
@@ -85,8 +85,8 @@
                     <div class="mb-3 row">
                         <label for="picture" class="col-sm-2 col-form-label">Preview</label>
                         <div class="col-sm-10">
-                            <img id="previewImage" src="/images/uploadgoods/<%= data.picture %>" class="img-thumbnail" alt="" width="300"
-                                height="auto" />
+                            <img id="previewImage" src="/images/uploadgoods/<%= data.picture %>" class="img-thumbnail"
+                                alt="" width="300" height="auto" />
                         </div>
                     </div>
                 </div>
@@ -120,6 +120,12 @@
                 previewImage.src = URL.createObjectURL(file)
             }
         }
+
+        $('.custom-file-input').on('change', function () {
+            let sampleFile = $(this).val().split('\\').pop();
+            $(this).next('.custom-file-label').addClass("selected").html(sampleFile);
+        });
+    </script>
     </script>
 
     </div>
