--- a/views/dashboards/list.ejs
+++ b/views/dashboards/list.ejs
@@ -6,8 +6,9 @@
         <!-- Page Heading -->
         <div class="d-sm-flex align-items-center justify-content-between mb-4">
             <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
-            <a href="" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
-                    class="fas fa-download fa-sm text-white-50"></i> Generate Report</a>
+            <button type="submit" onclick="exportTableToCSV('report.csv')"
+                class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
+                    class="fas fa-download fa-sm text-white-50"></i> Generate Report</button>
         </div>
 
         <div class="card">
@@ -471,6 +472,39 @@
                     },
                 });
             })
+        }
+
+        //user-defined function to download CSV file
+        function downloadCSV(csv, filename) {
+            var csvFile;
+            var downloadLink;
+
+            //define the file type to text/csv
+            csvFile = new Blob([csv], { type: 'text/csv' });
+            downloadLink = document.createElement("a");
+            downloadLink.download = filename;
+            downloadLink.href = window.URL.createObjectURL(csvFile);
+            downloadLink.style.display = "none";
+
+            document.body.appendChild(downloadLink);
+            downloadLink.click();
+        }
+
+        //user-defined function to export the data to CSV file format
+        function exportTableToCSV(filename) {
+            //declare a JavaScript variable of array type
+            var csv = [];
+            var rows = document.querySelectorAll("table");
+
+            //merge the whole data in tabular form 
+            for (var i = 0; i < rows.length; i++) {
+                var row = [], cols = rows[i].querySelectorAll("thead, tbody");
+                for (var j = 0; j < cols.length; j++)
+                    row.push(cols[j].innerText);
+                csv.push(row.join(" "));
+            }
+            //call the function to download the CSV file
+            downloadCSV(csv.join("\n"), filename);
         }
 
     </script>
