--- a/views/purchases/form.ejs
+++ b/views/purchases/form.ejs
@@ -186,13 +186,13 @@
                             <td>
                                 ${item.name}
                             </td>
-                            <td>
+                            <td class="right-position">
                                 ${item.quantity}
                             </td>
-                            <td>
+                            <td class="right-position">
                                 ${currencyFormatter.format(item.purchaseprice)}
                             </td>
-                            <td>
+                            <td class="right-position">
                                 ${currencyFormatter.format(item.totalprice)}
                             </td>
                             <td>
