--- a/views/sales/form.ejs
+++ b/views/sales/form.ejs
@@ -206,13 +206,13 @@
                             <td>
                                 ${item.name}
                             </td>
-                            <td>
+                            <td class="right-position">
                                 ${item.quantity}
                             </td>
-                            <td>
+                            <td class="right-position">
                                 ${currencyFormatter.format(item.sellingprice)}
                             </td>
-                            <td>
+                            <td class="right-position">
                                 ${currencyFormatter.format(item.totalprice)}
                             </td>
                             <td>
