--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -22,6 +22,8 @@
     <!-- Custom styles for this template-->
     <link href="/assets/css/sb-admin-2.css" rel="stylesheet">
 
+    <link rel="stylesheet" href="/stylesheets/style.css" />
+
     <!-- Custom styles for this page -->
     <link href="/assets/vendor/datatables/dataTables.bootstrap4.css" rel="stylesheet">
 
