--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -3,45 +3,50 @@
     <!-- Begin Page Content -->
     <div class="container-fluid">
 
-        <!-- Page Heading -->
-        <h1 class="h3 mb-2 text-gray-800">Profile</h1>
+        <% if(successMessage.length> 0){ %>
+            <div class="alert alert-success" role="alert">
+                <%= successMessage %>
+            </div>
+            <% } %>
 
+                <!-- Page Heading -->
+                <h1 class="h3 mb-2 text-gray-800">Profile</h1>
 
-        <div class="card">
-            <form action="" method="">
-                <div class="card-header">
-                    <h6 class="m-0 font-weight-bold text-primary">Your Profile</h6>
-                </div>
-
-                <div class="card-body">
-                    <div class="mb-3 row">
-                        <label for="email" class="col-sm-2 col-form-label">Email</label>
-                        <div class="col-sm-10">
-                            <input type="email" class="form-control" id="email" name="email" value="<%= data.email %>"
-                                required>
+                <div class="card">
+                    <form action="" method="post">
+                        <div class="card-header">
+                            <h6 class="m-0 font-weight-bold text-primary">Your Profile</h6>
                         </div>
-                    </div>
 
-                    <div class="mb-3 row">
-                        <label for="name" class="col-sm-2 col-form-label">Name</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" id="name" name="name" value="<%= data.name %>"
-                                required>
+                        <div class="card-body">
+                            <div class="mb-3 row">
+                                <label for="email" class="col-sm-2 col-form-label">Email</label>
+                                <div class="col-sm-10">
+                                    <input type="email" class="form-control" id="email" name="email"
+                                        value="<%= data.email %>">
+                                </div>
+                            </div>
+
+                            <div class="mb-3 row">
+                                <label for="name" class="col-sm-2 col-form-label">Name</label>
+                                <div class="col-sm-10">
+                                    <input type="text" class="form-control" id="name" name="name"
+                                        value="<%= data.name %>">
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                </div>
 
-                <div class="card-footer">
-                    <button type="submit" class="btn btn-success btn-icon-split">
-                        <span class="icon text-white-50">
-                            <i class="fas fa-fw fa-database"></i>
-                        </span>
-                        <span class="text">Update</span>
-                    </button>
-                </div>
+                        <div class="card-footer">
+                            <button type="submit" class="btn btn-success btn-icon-split">
+                                <span class="icon text-white-50">
+                                    <i class="fas fa-fw fa-database"></i>
+                                </span>
+                                <span class="text">Update</span>
+                            </button>
+                        </div>
 
-            </form>
-        </div>
+                    </form>
+                </div>
 
     </div>
     <!-- /.container-fluid -->
