change password done

--- a/views/users/changepassword.ejs
+++ b/views/users/changepassword.ejs
@@ -8,56 +8,102 @@
                 <%= successMessage %>
             </div>
             <% } %>
+                <% if(errorMessage.length> 0){ %>
+                    <div class="alert alert-danger" role="alert">
+                        <%= errorMessage %>
+                    </div>
+                    <% } %>
 
-                <!-- Page Heading -->
-                <h1 class="h3 mb-2 text-gray-800">Change Password</h1>
+                        <!-- Page Heading -->
+                        <h1 class="h3 mb-2 text-gray-800">Change Password</h1>
 
-                <div class="card">
-                    <form action="" method="post">
-                        <div class="card-header">
-                            <h6 class="m-0 font-weight-bold text-primary">Change Your Password</h6>
-                        </div>
-
-                        <div class="card-body">
-                            <div class="mb-3 row">
-                                <label for="oldpassword" class="col-sm-2 col-form-label">Old Password</label>
-                                <div class="col-sm-10">
-                                    <input type="password" class="form-control" id="oldpassword" name="oldpassword">
+                        <div class="card">
+                            <form action="" method="post">
+                                <div class="card-header">
+                                    <h6 class="m-0 font-weight-bold text-primary">Change Your Password</h6>
                                 </div>
-                            </div>
 
-                            <div class="mb-3 row">
-                                <label for="newpassword" class="col-sm-2 col-form-label">New Password</label>
-                                <div class="col-sm-10">
-                                    <input type="password" class="form-control" id="newpassword" name="newpassword">
+                                <div class="card-body">
+                                    <div class="mb-3 row">
+                                        <label for="oldpassword" class="col-sm-2 col-form-label">Old Password</label>
+                                        <div class="col-sm-10">
+                                            <input type="password" class="form-control" id="oldpassword"
+                                                name="oldpassword">
+                                        </div>
+                                    </div>
+
+                                    <div class="mb-3 row">
+                                        <label for="newpassword" class="col-sm-2 col-form-label">New Password</label>
+                                        <div class="col-sm-10">
+                                            <input type="password" class="form-control" id="newpassword"
+                                                name="newpassword">
+                                        </div>
+                                    </div>
+
+                                    <div class="mb-3 row">
+                                        <label for="retypepassword" class="col-sm-2 col-form-label">Retype
+                                            Password</label>
+                                        <div class="col-sm-10">
+                                            <input type="password" class="form-control" id="retypepassword"
+                                                name="retypepassword">
+                                        </div>
+                                    </div>
                                 </div>
-                            </div>
 
-                            <div class="mb-3 row">
-                                <label for="retypepassword" class="col-sm-2 col-form-label">Retype Password</label>
-                                <div class="col-sm-10">
-                                    <input type="password" class="form-control" id="retypepassword"
-                                        name="retypepassword">
+                                <div class="card-footer">
+                                    <button type="submit" class="btn btn-success btn-icon-split">
+                                        <span class="icon text-white-50">
+                                            <i class="fas fa-fw fa-database"></i>
+                                        </span>
+                                        <span class="text">Update</span>
+                                    </button>
                                 </div>
-                            </div>
-                        </div>
 
-                        <div class="card-footer">
-                            <button type="submit" class="btn btn-success btn-icon-split">
-                                <span class="icon text-white-50">
-                                    <i class="fas fa-fw fa-database"></i>
-                                </span>
-                                <span class="text">Update</span>
-                            </button>
+                            </form>
                         </div>
-
-                    </form>
-                </div>
 
     </div>
     <!-- /.container-fluid -->
 
-    </div>
-    <!-- End of Main Content -->
+    <script>
+        // Password and Confirmed passwords validation
+        let pwd = $('#password');
+        let confirmPwd = $('#confirm-password')
+        let matchingTxt = $('#.matching-txt')
+        let form = $('#form')
+        function comparePwd() {
+            if (confirmPwd.value) {
+                if (pwd.value != confirmPwd.value) {
+                    matchingTxt.style.display = 'block'
+                    matchingTxt.style.color = 'red'
+                    matchingTxt.innerHTML = 'Not Matching'
+                    return false
+                    e.preventDefault()
+                } else {
+                    matchingTxt.style.display = 'block'
+                    matchingTxt.style.color = 'green'
+                    matchingTxt.innerHTML = 'Matching'
+                }
+            } else {
+                matchingTxt.style.display = 'none'
+            }
+        }
+        confirmPwd.addEventListener('keyup', () => {
+            comparePwd()
+        })
+        pwd.addEventListener('keyup', () => {
+            comparePwd()
+        })
 
-    <%- include('../partials/footer')%>
+        // $('#newpassword, #retypepassword').on('keyup', function () {
+        //     if ($('#newpassword').val() == $('#retypepassword').val()) {
+        //         $('#message').html('The password you entered is correct').css('color', 'green');
+        //     } else
+        //         $('#message').html('The password you entered does not match').css('color', 'red');
+        // });
+    </script>
+
+    </div>
+    < !--End of Main Content-->
+
+        <% - include('../partials/footer') %>
