--- a/views/goods/list.ejs
+++ b/views/goods/list.ejs
@@ -26,8 +26,8 @@
                                 <th>Name</th>
                                 <th>Stock</th>
                                 <th>Unit</th>
-                                <th>Purchase Price</th>
-                                <th>Selling Price</th>
+                                <th class="left-position-tabel">Purchase Price</th>
+                                <th class="left-position-tabel">Selling Price</th>
                                 <th>Picture</th>
                                 <th>Action</th>
                             </tr>
@@ -38,8 +38,8 @@
                                 <th>Name</th>
                                 <th>Stock</th>
                                 <th>Unit</th>
-                                <th>Purchase Price</th>
-                                <th>Selling Price</th>
+                                <th class="left-position-tabel">Purchase Price</th>
+                                <th class="left-position-tabel">Selling Price</th>
                                 <th>Picture</th>
                                 <th>Action</th>
                             </tr>
@@ -66,12 +66,14 @@
                     { "data": "unit" },
                     {
                         "data": "purchaseprice",
+                        className: "right-position",
                         render: function (data, type) {
                             return currencyFormatter.format(data)
                         }
                     },
                     {
                         "data": "sellingprice",
+                        className: "right-position",
                         render: function (data, type) {
                             return currencyFormatter.format(data)
                         }
